# echomeet

./: .gitignore  LICENSE  README.md  pyproject.toml
meeting_translator/: audio.py  cli.py  native_capture.py  panel.py  recorder.py  transcriber.py  transcript.py  translation.py
native/: EchoMeet.icns  whisper_server.py
native/MeetingAudioCapture/: Package.swift
native/MeetingAudioCapture/Sources/MeetingAudioCapture/: main.swift
native/MeetingTranslatorApp/: Package.swift
native/MeetingTranslatorApp/MeetingTranslatorApp/: ContentView.swift  Info.plist  MeetingTranslatorApp.entitlements  MeetingTranslatorAppApp.swift
native/MeetingTranslatorApp/MeetingTranslatorApp/Assets.xcassets/: Contents.json
native/MeetingTranslatorApp/MeetingTranslatorApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
native/MeetingTranslatorApp/MeetingTranslatorApp/Models/: TranscriptStore.swift
native/MeetingTranslatorApp/MeetingTranslatorApp/Services/: AudioCaptureManager.swift  SpeechRecognizerManager.swift  Translator.swift
native/MeetingTranslatorApp/MeetingTranslatorApp/Views/: MainView.swift  SettingsView.swift
tests/: test_audio.py  test_cli.py  test_native_capture.py  test_panel.py  test_recorder.py  test_transcript.py  test_translation.py
